# snake-starter

./: Makefile  README.md  cookiecutter.json  pyproject.toml
src/{{cookiecutter.project_name}}/: Makefile
